fix responsive issues

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -34,7 +34,7 @@ a:hover {
   display: flex;
   align-items: center;
   position: relative;
-  background-image: url('/assets/home5..jpg');
+  background-image: url('/assets/home.jpg');
   background-size: cover;
   background-position: center;
 }
